--- a/src/style.css
+++ b/src/style.css
@@ -1,68 +1,105 @@
 *{margin:0; padding:0; outline:none;}
 
 @media(prefers-color-scheme:dark) {
-    body {
-        background-color: rgb(43, 50, 55);
-    }
-    #titlebar, #text-input {
+    #titlebar {
+        background-color: rgb(60,60,60);
         color: white;
     }
-    #window-controls img {
+    #titlebar img {
         filter: invert(1);
+    }
+    #text-input {
+        color: white;
     }
 }
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(30,30,30);
 }
 
-/* titlebar */
 #titlebar {
     display: flex;
-    justify-content: space-between;
     position: fixed;
-    font-size: 14px;
     top: 0;
     left: 0;
     right: 0;
-    height: 30px;
-    line-height: 30px;
+    justify-content: space-between;
     user-select: none;
+    font-size: 14px;
+    height: 30px;
 }
 #titlebar > div {
     display: inline-flex;
+    
 }
+
+#icon {
+    width: 8px;
+}
+
+/* menu */
 #menu {
-    gap: 10px;
+    display: flex;
 }
-#menu > div {
-    padding: 0px;
+.menu-button {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
 }
-#menu > div:hover {
-    background-color: gray;
+.menu-button-name {
+    padding: 0 8px;
+    line-height: 22px;
+    transition: .1s;
+    border-radius: 5px;
 }
+.menu-button-name:hover {
+    background-color: rgb(4, 57, 94);
+}
+.submenu {
+    position: absolute;
+    border-radius: 5px;
+    background-color: rgb(37,37,38);
+    padding: 5px;
+    top: 25px;
+    border: 1px solid dimgray;
+}
+.submenu > div {
+    border-radius: 5px;
+    padding: 5px 30px 5px 30px;
+}
+.submenu > div:hover {
+    background-color: rgb(4, 57, 94);
+    cursor: pointer;
+}
+
+#window-title {
+    align-items: center;
+}
+
 /* window-controls */
 #window-controls > div {
     display: inline-flex;
     width: 46px;
     justify-content: center;
     align-items: center;
+    transition: .1s;
 }
 #window-controls img {
-    width: 18px;
-    height: 18px;
-}
-#window-controls > div:nth-child(-n+2):hover {
-    background-color: gray;
+    width: 20px;
+    height: 20px;
 }
 #titlebar-close:hover {
     background-color: red;
 }
 
-#text-input {
-    padding: 10px;
+#toolbar {
+    display: flex;
+    background-color: red;
+    position: fixed;
 }
 
 #text-input {
-    margin-top: 25px;
+    margin-top: 30px;
+    padding: 10px;
 }
